# tiny-diffusion-cifar10

./: .env.example  .gitignore  .pre-commit-config.yaml  build_structure.py  dvc.yaml  params.yaml  pyproject.toml  requirements-freeze.txt  requirements.txt  test_dvc_file.txt.dvc
configs/: config.yaml
configs/data/: cifar10.yaml
configs/experiment/: baseline.yaml
configs/model/: base.yaml
configs/quantization/: fp32_baseline.yaml
configs/schedule/: cosine.yaml  linear.yaml
configs/training/: base.yaml
outputs/hydra_runs/2026-06-19_22-32-17/.hydra/: config.yaml  hydra.yaml
scripts/: download_data.py  launch.py  launch_vertex_training.py  smoke_test_training.py  sync_params.py  train.py  verify_train_structure.py
src/tiny_diffusion/data/: cifar10.py
src/tiny_diffusion/diffusion/: schedule.py
src/tiny_diffusion/models/: __init__.py  blocks.py  config.py  ema.py  embeddings.py  unet.py
src/tiny_diffusion/training/: checkpoint.py  kaggle_checkpoint.py  train.py
src/tiny_diffusion/utils/: seed.py  tracking.py
tests/: test_schedule.py  test_unet_shapes.py
